Tweak exclusions